[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/2048/2048.gd" type="Script" id=1]
[ext_resource path="res://Levels/2048/assets/grid.png" type="Texture" id=2]
[ext_resource path="res://Assets/background.png" type="Texture" id=3]
[ext_resource path="res://Assets/ark-pixel.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 4 )

[node name="2048" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Tween" type="Tween" parent="."]

[node name="GridImage" type="Sprite" parent="."]
position = Vector2( 220, 90 )
texture = ExtResource( 2 )
centered = false

[node name="Dices" type="Node2D" parent="."]
position = Vector2( 252, 122 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 220.0
margin_top = 60.0
margin_right = 412.0
margin_bottom = 84.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
align = 1

[node name="ResultPanel" type="Panel" parent="."]
visible = false
margin_left = 214.0
margin_top = 127.0
margin_right = 420.0
margin_bottom = 244.0

[node name="ResultLabel" type="Label" parent="ResultPanel"]
margin_left = 44.0
margin_top = 22.0
margin_right = 164.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "You Won! :)"
align = 1

[node name="TryAgainButton" type="Button" parent="ResultPanel"]
margin_left = 43.0
margin_top = 67.0
margin_right = 163.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 2 )
text = "Try Again"

[node name="Label" type="Label" parent="."]
margin_left = 217.0
margin_top = 7.0
margin_right = 440.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Use Arrow keys to move the dices.
You win when you make a 7."
